--- a/src/pages/CocktailList/CocktailList.css
+++ b/src/pages/CocktailList/CocktailList.css
@@ -1,3 +1,32 @@
+* {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
 a {
-    color: pink;
+    text-decoration: none;
+}
+h2 {
+    font-weight: 600;
+    font-size: 2em;
+    padding-top: 15vh;
+}
+.container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.cocktail-list-container {
+    width: 25%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.5em;
+}
+.cocktail-list-container p {
+    width: 30%;
+    text-align: center;
+}
+.cocktail-list-container a {
 }
