--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,4 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap');
 
+* {
+    font-family: 'Montserrat', sans-serif;
+}
+h1 {
+    font-weight: 600;
+    font-size: 3em;
+    animation: init 2s 1;
+}
+@keyframes init {
+    50% {font-size: 3.5em;}
+}
 #index-link {
     color: green;
     background-color: orange;
@@ -14,5 +26,5 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-top:30vh;
+    padding-top: 30vh;
 }
