--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,12 @@
 .nav {
-    background-color: red;
+    display: flex;
+    justify-content: flex-end;
+    padding: 30px;
+    width: 100%;
+    top: -1;
+
+}
+.nav a {
+    padding-right: 2.5em;
+    font-weight: 500;
 }
