--- a/src/pages/Cocktail/Cocktail.css
+++ b/src/pages/Cocktail/Cocktail.css
@@ -1,8 +1,14 @@
 .handle-btn {
-    padding: 10px 20px 10px 20px;
+    padding: 15px 35px 15px 35px;
     margin-left: 45%;
     margin-right: 50%;
     margin-bottom: 10px;
+    text-decoration: none;
+    font-weight: 400;
+    background-color: #c9d8d7;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
 }
 .ingredients-container {
     display: flex;
@@ -16,6 +22,7 @@
 .ingrImg img {
     width: 100%;
     border-radius: 2%;
+    box-shadow: 5px 5px 10px 0px #888;
 }
 .ingrUl {
     padding: 0 0 0 3%;
